--- a/javascript/vue/components/clock/clock.html
+++ b/javascript/vue/components/clock/clock.html
@@ -1,8 +1,8 @@
-<div class="clock-and-date" v-if="showClock">
-    <div class="clock">
+<div class="clock-and-date p-2" v-if="showClock">
+    <div class="clock bright">
         <span>{{ clock.hours }}</span><span> : {{ clock.minutes }}</span><span v-if="showSeconds"> : {{ clock.seconds }}</span>
     </div>
-    <div class="date" v-if="showDate">
+    <div class="date dimmed" v-if="showDate">
         <span>{{ date.day }}</span><span>/{{ date.month }}</span><span>/{{ date.year }}</span>
     </div>
 </div>
