--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,20 @@
 /*
  * Main / layout
 */
+
+// Core CSS
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/reboot";
+//@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/images";
+@import "../node_modules/bootstrap/scss/utilities";
+@import "../node_modules/bootstrap/scss/grid";
+//@import "../node_modules/bootstrap/scss/tables";
+//@import "../node_modules/bootstrap/scss/forms";
+//@import "../node_modules/bootstrap/scss/buttons";
+
 @import "layout/main";
 
 /*
