--- a/scss/layout/main.scss
+++ b/scss/layout/main.scss
@@ -19,14 +19,9 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-// Dirty override
 .height-override {
-    height: 27vh;
+    min-height: 29vh;
 }
-
-/**
- * Default styles.
- */
 
 .dimmed {
     color: #666;
@@ -94,15 +89,6 @@ body {
     text-align: left;
 }
 
-sup {
-    font-size: 50%;
-    line-height: 50%;
-}
-
-/**
- * Module styles.
- */
-
 .top-bar {
     top: 0;
 }
@@ -127,108 +113,3 @@ sup {
     text-align: center;
     color: #b3b3b3;
 }
-
-
-
-
-
-
-
-//.module {
-//    margin-bottom: 30px;
-//}
-//
-//.region.bottom .module {
-//    margin-top: 30px;
-//    margin-bottom: 0;
-//}
-//
-//.no-wrap {
-//    white-space: nowrap;
-//    overflow: hidden;
-//    text-overflow: ellipsis;
-//}
-//
-///**
-// * Region Definitions.
-// */
-//
-//
-//
-//.region.fullscreen {
-//    position: absolute;
-//    top: -60px;
-//    left: -60px;
-//    right: -60px;
-//    bottom: -60px;
-//    pointer-events: none;
-//}
-//
-//.region.fullscreen * {
-//    pointer-events: auto;
-//}
-//
-//.region.top {
-//    top: 0;
-//}
-//
-//.region.top .container {
-//    margin-bottom: 25px;
-//}
-//
-//.region.bottom .container {
-//    margin-top: 25px;
-//}
-//
-//.region.top .container:empty {
-//    margin-bottom: 0;
-//}
-//
-//.region.top.center,
-//.region.bottom.center {
-//    left: 50%;
-//    -moz-transform: translateX(-50%);
-//    -o-transform: translateX(-50%);
-//    -webkit-transform: translateX(-50%);
-//    -ms-transform: translateX(-50%);
-//    transform: translateX(-50%);
-//}
-//
-//.region.top.right,
-//.region.top.left,
-//.region.top.center {
-//    top: 100%;
-//}
-//
-//.region.bottom .container:empty {
-//    margin-top: 0;
-//}
-//
-//.region.bottom.right,
-//.region.bottom.center,
-//.region.bottom.left {
-//    bottom: 100%;
-//}
-//
-//
-//.region.upper.third {
-//    top: 33%;
-//}
-//
-//.region.middle.center {
-//    top: 50%;
-//}
-//
-//.region.lower.third {
-//    top: 66%;
-//}
-//
-//.region.left {
-//    text-align: left;
-//}
-//
-//.region table {
-//    width: 100%;
-//    border-spacing: 0;
-//    border-collapse: separate;
-//}
