--- a/scss/components/_clock_date.scss
+++ b/scss/components/_clock_date.scss
@@ -5,8 +5,13 @@
         font-size: 90px;
     }
 
-    .date span {
-        font-size: 25px;
+    .date {
+        margin-left: 20%;
+        padding-top: 10px;
+
+        span {
+            font-size: 25px;
+        }
     }
 }
 
